<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveWithResultActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/pilih_angka"/>

    <RadioGroup
        android:id="@+id/rg_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:layout_marginTop="12dp"/>

        <RadioButton
            android:id="@+id/rb_75"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_75"
            android:layout_marginTop="12dp"/>
        <RadioButton
            android:id="@+id/rb_100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_100"
            android:layout_marginTop="12dp"/>
        <RadioButton
            android:id="@+id/rb_125"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_125"
            android:layout_marginTop="12dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_angka"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
</LinearLayout>